--- a/src/assets/stylesheets/main.scss
+++ b/src/assets/stylesheets/main.scss
@@ -347,4 +347,11 @@ tr.clickable-row {
       }
     }
   }
+
+  .player-profile {
+    img.gravatar {
+      width: 160px;
+      height: 160px;
+    }
+  }
 }
